--- a/index.html
+++ b/index.html
@@ -5,39 +5,50 @@
   <title>Home</title>
 </head>
 <body>
+    <!--Header-->
     <header>
     <div class="inline-block logo">
-    <img src="../UX_UI_HW_18/images/logo.png">
+    <img src="/images/logo.png">
     </div>
-    <nab class="inline-block">
-    <ul>
+    
+    <!-- Header >> NavTop -->
+    <nav class="inline-block">
+    <ul class="navTop">
     <li>about</li>
     <li>skills</li>
     <li>work</li>
     <li>contact</li>
     </ul>
-    </nab>
+    </nav>
     </header>
-
+    
+    <!--Main-->
     <section class="heroImg">
         <div class="content">
-        <img src="../UX_UI_HW_18/images/me.png">
+        <img src="/images/me.png">
         <p>
             Since my very first college-level computer graphic design class, I’ve always enjoyed creating artwork with elements that I discover and embrace in my daily life. After completing my formal education, I began designing for Evergreen Newspapers in Evergreen, CO. I have been very fortunate through my employment there to gain experience and to earn opportunities to design projects for the many business needs of clients and entrepreneurs in the foothill and mountain communities over these past 10 years. 
             As I design something, I see myself as the organizer of elements into the creation of artwork. By sorting through bits of information provided by my clients, I am able to orchestrate my design work to meet their targets with simple, but very effective methods to understand their needs and objectives.
         </p>
         <button>
-
+resume
         </button>
     </div>
+
+
     </section>
 
+    <!--Footer-->   
+     <!-- Footer >> NavBottom -->
     <footer>
-        <ul>
+       <div class="footerNav">
+
+       <ul class="navBottom">
             <li>about</li>
             <li>skills</li>
             <li>work</li>
             <li>contact</li>
             </ul>
+        </div>
     </footer>
 </body>
