--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             </div>    
             <div class="myName">
                 <p>TAKI GOMI</p>
+                
             </div>
             <div class="myTitle">
                 <p>visual/UX/UI designer</p>
@@ -23,7 +24,7 @@
     <!-- Header >> NavTop -->
     <nav class="navigation">
         <div class="navTop">
-            <a href="about.html">about.</a>
+            <a href="/about.html">about.</a>
             <a href="/skills.html">skills.</a>
             <a href="/work.html">work.</a>
             <a href="/contact.html">contact.</a>
