a lot of accomplishment

--- a/about.html
+++ b/about.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <link href="css/style.css" rel="stylesheet" type="text/css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
   <title>About</title>
 </head>
 <body>
