--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <link href="css/style.css" rel="stylesheet" type="text/css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
   <title>Home</title>
 </head>
 <body>
@@ -31,10 +34,10 @@
             </div>
             <div class="icons">
                 <a href="/https://www.behance.net/takahitogomi/">
-                    <img src="/images/be.png">
+                    <img src="/images/be.png" class="behance">
                     </a>
                 <a href="/https://www.linkedin.com/in/takahito-gomi-63302167/">
-                    <img src="/images/Linked.png">
+                    <img src="/images/Linked.png" class="linked">
                     </a>
             </div>
         </div>
