--- a/contact.html
+++ b/contact.html
@@ -23,26 +23,27 @@
         </div>
 
 
-<!-- Header >> NavTop -->
-<nav class="navigation">
-    <div class="navTop">
-        <a href="/about.html">about.</a>
-        <a href="/skills.html">skills.</a>
-        <a href="/work.html">work.</a>
-        <a href="/contact.html">contact.</a>
+    <!-- Header >> NavTop -->
+    <nav class="navigation">
+        <div class="navTop">
+            <a href="/about.html">about.</a>
+            <a href="/skills.html">skills.</a>
+            <a href="/work.html">work.</a>
+            <a href="/contact.html">contact.</a>
+            </div>
+            <div class="icons">
+                <a href="https://www.behance.net/takahitogomi/">
+                    <img src="/images/be.png" class="behance">
+                    </a>
+                <a href="https://www.linkedin.com/in/takahito-gomi-63302167/">
+                    <img src="/images/Linked.png" class="linked">
+                    </a>
+            </div>
         </div>
-        <div class="icons">
-            <a href="/https://www.behance.net/takahitogomi/">
-                <img src="/images/be.png">
-                </a>
-            <a href="/https://www.linkedin.com/in/takahito-gomi-63302167/">
-                <img src="/images/Linked.png">
-                </a>
-        </div>
-    </div>
 
 
-</nav>
+    </nav>
+    
     </header>
         
     <!--Main-->
