--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <a href="/contact.html">contact.</a>
             </div>
             <div class="icons">
-                <a href="/https://www.behance.net/takahitogomi/">
+                <a href="https://www.behance.net/takahitogomi/">
                     <img src="/images/be.png" class="behance">
                     </a>
-                <a href="/https://www.linkedin.com/in/takahito-gomi-63302167/">
+                <a href="https://www.linkedin.com/in/takahito-gomi-63302167/">
                     <img src="/images/Linked.png" class="linked">
                     </a>
             </div>
@@ -71,7 +71,7 @@
         
     
         </div>
-        <div class="copyright">
+        <div class="copyRight">
             © 2035 by Taki Gomi
         </div>
         <div class="bottomLine"></div>
