--- a/about.html
+++ b/about.html
@@ -23,35 +23,34 @@
         </div>
 
 
-<!-- Header >> NavTop -->
-<nav class="navigation">
-    <div class="navTop">
-        <a href="/about.html">about.</a>
-        <a href="/skills.html">skills.</a>
-        <a href="/work.html">work.</a>
-        <a href="/contact.html">contact.</a>
+    <!-- Header >> NavTop -->
+    <nav class="navigation">
+        <div class="navTop">
+            <a href="/about.html">about.</a>
+            <a href="/skills.html">skills.</a>
+            <a href="/work.html">work.</a>
+            <a href="/contact.html">contact.</a>
+            </div>
+            <div class="icons">
+                <a href="https://www.behance.net/takahitogomi/">
+                    <img src="/images/be.png" class="behance">
+                    </a>
+                <a href="https://www.linkedin.com/in/takahito-gomi-63302167/">
+                    <img src="/images/Linked.png" class="linked">
+                    </a>
+            </div>
         </div>
-        <div class="icons">
-            <a href="/https://www.behance.net/takahitogomi/">
-                <img src="/images/be.png">
-                </a>
-            <a href="/https://www.linkedin.com/in/takahito-gomi-63302167/">
-                <img src="/images/Linked.png">
-                </a>
-        </div>
-    </div>
 
 
-</nav>
+    </nav>
+
     </header>
         
      <!--Main-->
     <section>
         <div class="contentAbout">
-            <div class="contentHeader">
-                <h1>about.</h1>
+            <div class="contentHeader"> about.</div>
                 <div class="headerLine"></div>
-            </div>
             
             <div class="aboutMe">
                  <img src="/images/me.png">
