--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!--Header-->
     <header class="header">
             <div class="logo">
-                <a href="/index.html">
-                <img src="/images/logo.png">
+                <a href="index.html">
+                <img src="images/logo.png">
                 </a>
             </div>    
             <div class="myName">
@@ -27,17 +27,17 @@
     <!-- Header >> NavTop -->
     <nav class="navigation">
         <div class="navTop">
-            <a href="/about.html">about.</a>
-            <a href="/skills.html">skills.</a>
-            <a href="/work.html">work.</a>
-            <a href="/contact.html">contact.</a>
+            <a href="about.html">about.</a>
+            <a href="skills.html">skills.</a>
+            <a href="work.html">work.</a>
+            <a href="contact.html">contact.</a>
             </div>
             <div class="icons">
                 <a href="https://www.behance.net/takahitogomi/">
-                    <img src="/images/be.png" class="behance">
+                    <img src="images/be.png" class="behance">
                     </a>
                 <a href="https://www.linkedin.com/in/takahito-gomi-63302167/">
-                    <img src="/images/Linked.png" class="linked">
+                    <img src="images/Linked.png" class="linked">
                     </a>
             </div>
         </div>
@@ -50,7 +50,7 @@
     <!--Main-->
     <section>
         <div class="contentHome">
-            <img src="/images/me.png">
+            <img src="images/me.png">
             <div class="myBio">
                 <p class="myInfo">
                 Since my very first college-level computer graphic design class, I’ve always enjoyed creating artwork with elements that I discover and embrace in my daily life. After completing my formal education, I began designing for Evergreen Newspapers in Evergreen, CO. I have been very fortunate through my employment there to gain experience and to earn opportunities to design projects for the many business needs of clients and entrepreneurs in the foothill and mountain communities over these past 10 years. 
