--- a/work.html
+++ b/work.html
@@ -11,8 +11,8 @@
     <!--Header-->
     <header class="header">
         <div class="logo">
-            <a href="/index.html">
-            <img src="/images/logo.png">
+            <a href="index.html">
+            <img src="images/logo.png">
             </a>
         </div>    
         <div class="myName">
@@ -26,17 +26,17 @@
     <!-- Header >> NavTop -->
     <nav class="navigation">
         <div class="navTop">
-            <a href="/about.html">about.</a>
-            <a href="/skills.html">skills.</a>
-            <a href="/work.html">work.</a>
-            <a href="/contact.html">contact.</a>
+            <a href="about.html">about.</a>
+            <a href="skills.html">skills.</a>
+            <a href="work.html">work.</a>
+            <a href="contact.html">contact.</a>
             </div>
             <div class="icons">
                 <a href="https://www.behance.net/takahitogomi/">
-                    <img src="/images/be.png" class="behance">
+                    <img src="images/be.png" class="behance">
                     </a>
                 <a href="https://www.linkedin.com/in/takahito-gomi-63302167/">
-                    <img src="/images/Linked.png" class="linked">
+                    <img src="images/Linked.png" class="linked">
                     </a>
             </div>
         </div>
@@ -53,7 +53,7 @@
        
             <div class="cardContainer-work">
                 <div class="cardWorks">
-                    <img src="/images/me.png">
+                    <img src="images/me.png">
                     <div class="cardContent-work">
                      <h3>Mobile Prototype Project Title 1</h3>
                      <p>
@@ -64,7 +64,7 @@
                  </div>
                 
                 <div class="cardWorks">
-                    <img src="/images/me.png">
+                    <img src="images/me.png">
                     <div class="cardContent-work">
                      <h3>Mobile Prototype Project Title 2</h3>
                      <p>
@@ -75,7 +75,7 @@
                  </div>
 
                  <div class="cardWorks">
-                    <img src="/images/me.png">
+                    <img src="images/me.png">
                     <div class="cardContent-work">
                      <h3>Mobile Prototype Project Title 3</h3>
                      <p>
