--- a/skills.html
+++ b/skills.html
@@ -11,8 +11,8 @@
     <!--Header-->
     <header class="header">
         <div class="logo">
-            <a href="/index.html">
-            <img src="/images/logo.png">
+            <a href="index.html">
+            <img src="images/logo.png">
             </a>
         </div>    
         <div class="myName">
@@ -26,17 +26,17 @@
     <!-- Header >> NavTop -->
     <nav class="navigation">
         <div class="navTop">
-            <a href="/about.html">about.</a>
-            <a href="/skills.html">skills.</a>
-            <a href="/work.html">work.</a>
-            <a href="/contact.html">contact.</a>
+            <a href="about.html">about.</a>
+            <a href="skills.html">skills.</a>
+            <a href="work.html">work.</a>
+            <a href="contact.html">contact.</a>
             </div>
             <div class="icons">
                 <a href="https://www.behance.net/takahitogomi/">
-                    <img src="/images/be.png" class="behance">
+                    <img src="images/be.png" class="behance">
                     </a>
                 <a href="https://www.linkedin.com/in/takahito-gomi-63302167/">
-                    <img src="/images/Linked.png" class="linked">
+                    <img src="images/Linked.png" class="linked">
                     </a>
             </div>
         </div>
@@ -52,7 +52,7 @@
                 
                 <div class="cardContainer">
                      <div class="card">
-                        <img src="/images/me.png">
+                        <img src="images/me.png">
                         <div class="cardContent">
                             <h3>User Research</h3>
                             <p>
@@ -62,7 +62,7 @@
                      </div>
 
                      <div class="card">
-                        <img src="/images/me.png">
+                        <img src="images/me.png">
                         <div class="cardContent">
                             <h3>User Interface Design</h3>
                             <p>
@@ -71,7 +71,7 @@
                         </div>
                      </div>
                      <div class="card">
-                        <img src="/images/me.png">
+                        <img src="images/me.png">
                         <div class="cardContent">
                             <h3>Web Development</h3>
                             <p>
